# EMG-Team205

./: README.md  plot.ipynb  pyproject.toml  signalprocessing.py
Neural_Network/: train_ann.py  train_gab.py
Signal Processing/: plot.ipynb  signal_splice.py  signalprocessing.py
